--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to Firebase Hosting</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/5.4.2/firebase-app.js"></script>
     <!-- include only the Firebase features as you need -->
@@ -16,131 +14,37 @@
     <!-- initialize the SDK after all desired features are loaded -->
     <script defer src="/__/firebase/init.js"></script>
 
-    <style media="screen">
-        body {
-            background: #ECEFF1;
-            color: rgba(0, 0, 0, 0.87);
-            font-family: Roboto, Helvetica, Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
+    <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-        #message {
-            background: white;
-            max-width: 360px;
-            margin: 100px auto 16px;
-            padding: 32px 24px;
-            border-radius: 3px;
-        }
-
-        #message h2 {
-            color: #ffa100;
-            font-weight: bold;
-            font-size: 16px;
-            margin: 0 0 8px;
-        }
-
-        #message h1 {
-            font-size: 22px;
-            font-weight: 300;
-            color: rgba(0, 0, 0, 0.6);
-            margin: 0 0 16px;
-        }
-
-        #message p {
-            line-height: 140%;
-            margin: 16px 0 24px;
-            font-size: 14px;
-        }
-
-        #message a {
-            display: block;
-            text-align: center;
-            background: #039be5;
-            text-transform: uppercase;
-            text-decoration: none;
-            color: white;
-            padding: 16px;
-            border-radius: 4px;
-        }
-
-        #message, #message a {
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-        }
-
-        #load {
-            color: rgba(0, 0, 0, 0.4);
-            text-align: center;
-            font-size: 13px;
-        }
-
-        @media (max-width: 600px) {
-            body, #message {
-                margin-top: 0;
-                background: white;
-                box-shadow: none;
-            }
-
-            body {
-                border-top: 16px solid #ffa100;
-            }
+    <style>
+        @font-face {
+            font-family: "Typewriter";
+            src: url(./resources/font/JosefinSlab-Regular.ttf) format("truetype");
         }
     </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-<div id="message">
-    <h2>Welcome</h2>
-    <h1>Firebase Hosting Setup Complete</h1>
-    <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something
-        extraordinary!</p>
-    <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
-    <div id="regexsend">
+<body style="display: grid; grid-template-rows: [first] 50px [second] auto;">
+<div class="container" style="grid-template-columns: [first] 200px [second] auto">
+    <div class="title">Regex Odyssey</div>
+    <div class="header-menu"></div>
+</div>
+<div class="regex-generation-container">
+    <script type="module">
+        import {regexGeneration} from './regex_generation/RegexGeneration.js';
+
+        const regexGenerationContainer = document.getElementsByClassName("regex-generation-container")[0];
+        const input = regexGenerationContainer.querySelector('input');
+        const button = regexGenerationContainer.querySelector('button');
+        const value = regexGenerationContainer.querySelector('.output div');
+        regexGeneration(input, button, value);
+    </script>
+    <input type="text" placeholder="Regex value" style="margin-bottom: 0.5%"/>
+    <button style="margin-bottom: 0.5%">GENERATE</button>
+    <div class="output">
+        <div></div>
     </div>
 </div>
-<p id="load">Firebase SDK Loading&hellip;</p>
 
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        try {
-            let app = firebase.app();
-            let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
-            document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-            console.error(e);
-            document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
-        }
-
-
-        const regexSendContained = document.getElementById("regexsend");
-
-        const input = document.createElement("input");
-        input.type = "text";
-        input.placeholder = "regex";
-
-
-        const divDisplay = document.createElement("div");
-
-        const button = document.createElement("button");
-        button.innerText = "SEND";
-        button.addEventListener("click", () => {
-            console.log(input.value);
-            $.get(`regexgeneration?regex=${input.value}`, (data) => {
-                divDisplay.innerText = data;
-            })
-        });
-
-        input.addEventListener("keyup", (event) => {
-            event.preventDefault();
-            if (event.keyCode === 13) {
-                button.dispatchEvent(new Event("click"))
-            }
-        });
-
-        regexSendContained.appendChild(input);
-        regexSendContained.appendChild(button);
-        regexSendContained.appendChild(divDisplay);
-
-    });
-</script>
 </body>
 </html>
