--- a/public/regex_generation/regex.html
+++ b/public/regex_generation/regex.html
@@ -1,18 +1,26 @@
+<!-- Introduction paragraph -->
+<div class="center">
+    <div class="first-line">Regex Odyssey embark you on a journey where</div>
+    <div class="second-line"> Strings are generated from Regex in a highly customizable way.</div>
+</div>
+
+<!-- Regex Generation Module -->
 <div id="regex-generation-container" class="regex-generation-container">
     <link rel="stylesheet" href="/regex_generation/regex.css">
-    <input type="text" placeholder="Regex value"/>
-    <button><i class="em em-rocket"></i></button>
+    <input type="text" placeholder="Write and send Regex to the rocket."/>
+    <button class="compute-button"><i class="em em-rocket"></i></button>
     <div class="output">
         <div>results...</div>
     </div>
 </div>
+<!-- End Regex Generation Module -->
 
 <script type="module">
     import {regexGeneration} from '/regex_generation/RegexGeneration.js';
 
     const regexGenerationContainer = document.getElementById("regex-generation-container");
     const input = regexGenerationContainer.querySelector('input');
-    const button = regexGenerationContainer.querySelector('button');
+    const button = regexGenerationContainer.querySelector('.compute-button');
     const value = regexGenerationContainer.querySelector('.output div');
     regexGeneration(input, button, value);
 </script>
