Initial version of rocket launch #RO-1

--- a/public/regex_generation/regex.html
+++ b/public/regex_generation/regex.html
@@ -8,7 +8,9 @@
 <div id="regex-generation-container" class="regex-generation-container">
     <link rel="stylesheet" href="/regex_generation/regex.css">
     <input type="text" placeholder="Write and send Regex to the rocket."/>
-    <button class="compute-button"><i class="em em-rocket"></i></button>
+    <button class="compute-button">
+        <div w3-include-html="/rocket/Rocket.html" class="button-rocket"></div>
+    </button>
     <div class="output">
         <div>results...</div>
     </div>
