Adding cloud falling #RO-1

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,9 @@
 <div id="pages">
     <div w3-include-html="/regex_generation/regex.html"></div>
 </div>
+
+<div id="cloud-container"></div>
+
 <script>
     includeHTML();
 </script>
