Adding scrolling component for regex generation options

--- a/public/regex_generation/regex.html
+++ b/public/regex_generation/regex.html
@@ -11,6 +11,12 @@
     <button class="compute-button">
         <div class="button-rocket" style="display: grid"></div>
     </button>
+    <div w3-include-html="/horizontal_bar/HorizontalBar.html" id="option-bar">
+        <div>Button
+            <button></button>
+        </div>
+        <div>zdzd</div>
+    </div>
     <div class="output">
         <div>results...</div>
     </div>
