Updating and adding unit tests

--- a/public/test/Test.html
+++ b/public/test/Test.html
@@ -23,6 +23,7 @@
 <script src="/lib/axios.min.js"></script>
 <script>mocha.setup('bdd')</script>
 <script type="module" src="./regex_generation/RegexGeneration.test.js"></script>
+<script type="module" src="./horizontal_bar/HorizontalBar.test.js"></script>
 <script type="module" src="./HeaderMenu.test.js"></script>
 <script type="module">
     mocha.checkLeaks();
